fixed bug in Map removeOutOfMapCoordinates creating an immutable List.